--- a/hackathon/catchup/templates/catchup/login.html
+++ b/hackathon/catchup/templates/catchup/login.html
@@ -3,11 +3,9 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="{% static 'catchup/style.css' %}">
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chat App | Login</title>
-  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -25,14 +23,15 @@
     <!-- Sign In Form -->
     <form class="signin-form" action="/chat/" method="GET">
       <input type="text" name="username" placeholder="Username" required>
-      <input type="email" name="gmail" placeholder="Gmail" required>
+      <input type="password" name="password" placeholder="Password" required>
       <button type="submit">Sign In</button>
     </form>
 
     <!-- Sign Up Form -->
     <form class="signup-form" action="/signup/" method="POST">
-      <input type="text" name="new_username" placeholder="Choose Username" required>
-      <input type="email" name="new_gmail" placeholder="Your Gmail" required>
+      <input type="email" name="gmail" placeholder="Your Gmail" required>
+      <input type="text" name="username" placeholder="Choose Username" required>
+      <input type="password" name="password" placeholder="Create Password" required>
       <button type="submit">Sign Up</button>
     </form>
   </div>
