--- a/hackathon/catchup/templates/catchup/chat_page_dark.html
+++ b/hackathon/catchup/templates/catchup/chat_page_dark.html
@@ -506,8 +506,9 @@ button:hover::before {
       </div>
 
       <div class="add-friend"><!-- From Uiverse.io by alexroumi --> 
-<button> Add Friend
-</button></div>
+        <button>Add Friend</button>
+      </div>
+      <div style="padding:10px;"><a href="{% url 'login' %}">Logout</a></div>
     </div>
 
     <div class="chat-section">
