friend requests page

--- a/hackathon/catchup/templates/catchup/chat_page_dark.html
+++ b/hackathon/catchup/templates/catchup/chat_page_dark.html
@@ -680,6 +680,7 @@ button:hover::before {
 
 
       <div style="padding:10px;"><a href="{% url 'login' %}">Logout</a></div>
+      <div style="padding:10px;"><a href="{% url 'friends' %}">View Friends</a></div>
     </div>
 
     {% block body %}
