--- a/hackathon/catchup/templates/catchup/chatroom_partial.html
+++ b/hackathon/catchup/templates/catchup/chatroom_partial.html
@@ -4,7 +4,6 @@
       <div class="friend-avatar"></div>
       <div>
         <div class="chat-user-name">{{ friend.username }}</div>
-        <div class="chat-user-last-seen">Last seen 2 hours ago</div>
       </div>
     </div>
     <button class="chat-options-button" aria-label="Chat options">
@@ -21,7 +20,31 @@
     {% endfor %}
   </div>
 
+  {% if friend %}
+  <form action="{% url 'send_message' friend.id %}" method="POST">
+  {% csrf_token %}
   <div class="chat-input-section">
-    ...
+      <input
+          type="text"
+          name="content"
+          class="chat-input"
+          placeholder="Type your message..."
+          aria-label="Message input"
+          required />
+
+      <div class="buttons-container"> 
+        <button type="submit" class="send-button" aria-label="Send message">
+          <svg viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+            <path d="M2 21l21-9L2 3v7l15 2-15 2v7z" />
+          </svg>
+        </button>
+      </div>
   </div>
+  </form>
+  {% else %}
+  <p>Please select a friend to start chatting.</p>
+  {% endif %}
+
 </div>
+
+
