--- a/hackathon/catchup/templates/catchup/profile.html
+++ b/hackathon/catchup/templates/catchup/profile.html
@@ -114,17 +114,16 @@ change_username and change_profile_picture should be Django URL names mapped to 
 -->
   <div class="profile-container">
     <div class="profile-card">
-      <img src="{{ user.profile_picture.url }}" alt="Profile Picture" class="profile-pic">
+      <img src="" alt="Profile Picture" class="profile-pic">
       <h2 class="username">{{ user.username }}</h2>
       <p class="email">{{ user.email }}</p>
 
       <div class="profile-actions">
-        <form method="POST" action="{% url 'change_username' %}">
-          {% csrf_token %}
+        <form method="POST" action="#">
           <button class="profile-btn" type="submit">Change Username</button>
         </form>
 
-        <form method="POST" action="{% url 'change_profile_picture' %}" enctype="multipart/form-data">
+        <form method="POST" action="#" enctype="multipart/form-data">
           {% csrf_token %}
           <label for="profile-pic-upload" class="upload-label">Upload New Picture</label>
           <input type="file" name="profile_picture" id="profile-pic-upload" onchange="this.form.submit()">
