--- a/hackathon/catchup/templates/catchup/chatroom_partial.html
+++ b/hackathon/catchup/templates/catchup/chatroom_partial.html
@@ -41,7 +41,7 @@
   </div>
   </form>
   {% else %}
-  <p>Please select a friend to start chatting.</p>
+  <p class="select-a-friend">Please select a friend to start chatting.</p>
   {% endif %}
 
 </div>
