--- a/hackathon/catchup/templates/catchup/profile.html
+++ b/hackathon/catchup/templates/catchup/profile.html
@@ -114,20 +114,13 @@ change_username and change_profile_picture should be Django URL names mapped to 
 -->
   <div class="profile-container">
     <div class="profile-card">
-      <img src="" alt="Profile Picture" class="profile-pic">
+      <img src="{{ request.user.userprofile.profile_picture }}" alt="Profile Picture" class="profile-pic">
       <h2 class="username">{{ user.username }}</h2>
       <p class="email">{{ user.email }}</p>
 
       <div class="profile-actions">
-        <form method="POST" action="#">
-          <button class="profile-btn" type="submit">Change Username</button>
-        </form>
-
-        <form method="POST" action="#" enctype="multipart/form-data">
-          {% csrf_token %}
-          <label for="profile-pic-upload" class="upload-label">Upload New Picture</label>
-          <input type="file" name="profile_picture" id="profile-pic-upload" onchange="this.form.submit()">
-        </form>
+          <a href="{% url 'change_username' %}"><button class="profile-btn">Change Username</button></a>
+          <a href="{% url 'update_profile_picture' %}"><label for="profile-pic-upload" class="upload-label">Upload New Picture</label></a>
       </div>
     </div>
   </div>
